; ModuleID = '/home/carl/AnghaBench/linux/fs/nfs/extr_proc.c_nfs_proc_create.c'
source_filename = "/home/carl/AnghaBench/linux/fs/nfs/extr_proc.c_nfs_proc_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.dentry = type { i32 }
%struct.iattr = type { i32 }
%struct.nfs_createdata = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i32 }
%struct.rpc_message = type { %struct.TYPE_2__*, i32*, i32* }

@nfs_procedures = common dso_local global i32* null, align 8
@NFSPROC_CREATE = common dso_local global i64 0, align 8
@ENOMEM = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"NFS call  create %pd\0A\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"NFS reply create: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.dentry*, %struct.iattr*, i32)* @nfs_proc_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @nfs_proc_create(%struct.inode* %0, %struct.dentry* %1, %struct.iattr* %2, i32 %3) #0 {
  %5 = alloca %struct.inode*, align 8
  %6 = alloca %struct.dentry*, align 8
  %7 = alloca %struct.iattr*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.nfs_createdata*, align 8
  %10 = alloca %struct.rpc_message, align 8
  %11 = alloca i32, align 4
  store %struct.inode* %0, %struct.inode** %5, align 8
  store %struct.dentry* %1, %struct.dentry** %6, align 8
  store %struct.iattr* %2, %struct.iattr** %7, align 8
  store i32 %3, i32* %8, align 4
  %12 = getelementptr inbounds %struct.rpc_message, %struct.rpc_message* %10, i32 0, i32 0
  store %struct.TYPE_2__* null, %struct.TYPE_2__** %12, align 8
  %13 = getelementptr inbounds %struct.rpc_message, %struct.rpc_message* %10, i32 0, i32 1
  store i32* null, i32** %13, align 8
  %14 = getelementptr inbounds %struct.rpc_message, %struct.rpc_message* %10, i32 0, i32 2
  %15 = load i32*, i32** @nfs_procedures, align 8
  %16 = load i64, i64* @NFSPROC_CREATE, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  store i32* %17, i32** %14, align 8
  %18 = load i32, i32* @ENOMEM, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %11, align 4
  %20 = load %struct.dentry*, %struct.dentry** %6, align 8
  %21 = ptrtoint %struct.dentry* %20 to i32
  %22 = call i32 @dprintk(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i32 %21)
  %23 = load %struct.inode*, %struct.inode** %5, align 8
  %24 = load %struct.dentry*, %struct.dentry** %6, align 8
  %25 = load %struct.iattr*, %struct.iattr** %7, align 8
  %26 = call %struct.nfs_createdata* @nfs_alloc_createdata(%struct.inode* %23, %struct.dentry* %24, %struct.iattr* %25)
  store %struct.nfs_createdata* %26, %struct.nfs_createdata** %9, align 8
  %27 = load %struct.nfs_createdata*, %struct.nfs_createdata** %9, align 8
  %28 = icmp eq %struct.nfs_createdata* %27, null
  br i1 %28, label %29, label %30

29:                                               ; preds = %4
  br label %58

30:                                               ; preds = %4
  %31 = load %struct.nfs_createdata*, %struct.nfs_createdata** %9, align 8
  %32 = getelementptr inbounds %struct.nfs_createdata, %struct.nfs_createdata* %31, i32 0, i32 1
  %33 = getelementptr inbounds %struct.rpc_message, %struct.rpc_message* %10, i32 0, i32 1
  store i32* %32, i32** %33, align 8
  %34 = load %struct.nfs_createdata*, %struct.nfs_createdata** %9, align 8
  %35 = getelementptr inbounds %struct.nfs_createdata, %struct.nfs_createdata* %34, i32 0, i32 0
  %36 = getelementptr inbounds %struct.rpc_message, %struct.rpc_message* %10, i32 0, i32 0
  store %struct.TYPE_2__* %35, %struct.TYPE_2__** %36, align 8
  %37 = load %struct.inode*, %struct.inode** %5, align 8
  %38 = call i32 @NFS_CLIENT(%struct.inode* %37)
  %39 = call i32 @rpc_call_sync(i32 %38, %struct.rpc_message* %10, i32 0)
  store i32 %39, i32* %11, align 4
  %40 = load %struct.inode*, %struct.inode** %5, align 8
  %41 = call i32 @nfs_mark_for_revalidate(%struct.inode* %40)
  %42 = load i32, i32* %11, align 4
  %43 = icmp eq i32 %42, 0
  br i1 %43, label %44, label %55

44:                                               ; preds = %30
  %45 = load %struct.dentry*, %struct.dentry** %6, align 8
  %46 = load %struct.nfs_createdata*, %struct.nfs_createdata** %9, align 8
  %47 = getelementptr inbounds %struct.nfs_createdata, %struct.nfs_createdata* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 1
  %49 = load i32, i32* %48, align 4
  %50 = load %struct.nfs_createdata*, %struct.nfs_createdata** %9, align 8
  %51 = getelementptr inbounds %struct.nfs_createdata, %struct.nfs_createdata* %50, i32 0, i32 0
  %52 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %51, i32 0, i32 0
  %53 = load i32, i32* %52, align 4
  %54 = call i32 @nfs_instantiate(%struct.dentry* %45, i32 %49, i32 %53, i32* null)
  store i32 %54, i32* %11, align 4
  br label %55

55:                                               ; preds = %44, %30
  %56 = load %struct.nfs_createdata*, %struct.nfs_createdata** %9, align 8
  %57 = call i32 @nfs_free_createdata(%struct.nfs_createdata* %56)
  br label %58

58:                                               ; preds = %55, %29
  %59 = load i32, i32* %11, align 4
  %60 = call i32 @dprintk(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0), i32 %59)
  %61 = load i32, i32* %11, align 4
  ret i32 %61
}

declare dso_local i32 @dprintk(i8*, i32) #1

declare dso_local %struct.nfs_createdata* @nfs_alloc_createdata(%struct.inode*, %struct.dentry*, %struct.iattr*) #1

declare dso_local i32 @rpc_call_sync(i32, %struct.rpc_message*, i32) #1

declare dso_local i32 @NFS_CLIENT(%struct.inode*) #1

declare dso_local i32 @nfs_mark_for_revalidate(%struct.inode*) #1

declare dso_local i32 @nfs_instantiate(%struct.dentry*, i32, i32, i32*) #1

declare dso_local i32 @nfs_free_createdata(%struct.nfs_createdata*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
